# tibber-prometheus-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  example_grafana_dashboard.json  flake.nix  rust-toolchain.toml
src/: main.rs
